# aoc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
23/d01/src/: main.rs
23/d02/src/: main.rs
23/d03/src/: main.rs
23/d04/src/: main.rs
23/d05/src/: main.rs
23/d06/src/: main.rs
23/d07/src/: main.rs
23/d08/src/: main.rs
23/d09/src/: main.rs
23/d10/src/: main.rs
23/d11/src/: main.rs
23/d12/src/: main.rs
23/d13/: Cargo.toml
23/d13/src/: main.rs
23/d14/: Cargo.toml
23/d14/src/: main.rs
23/d15/: Cargo.toml
23/d15/src/: main.rs
23/d16/: Cargo.toml
23/d16/src/: main.rs
23/d17/: Cargo.toml
23/d17/src/: main.rs
23/d18/: Cargo.toml
23/d18/src/: main.rs
24/: CMakeLists.txt  README.md
24/_template/: cookiecutter.json
24/_template/d{{cookiecutter.day_id}}/: CMakeLists.txt  d{{cookiecutter.day_id}}.cpp  d{{cookiecutter.day_id}}.hpp
24/cmake/: Platform.cmake
24/core/inc/: core_lib.hpp
24/core/src/: core_lib.cpp
24/d01/: CMakeLists.txt  d01.cpp  d01.hpp  main.cpp
24/d02/: CMakeLists.txt  d02.cpp  d02.hpp
24/d03/: CMakeLists.txt  d03.cpp  d03.hpp
24/d04/: CMakeLists.txt  d04.cpp  d04.hpp  main.cpp
24/d05/: CMakeLists.txt  d05.cpp  d05.hpp
24/d06/: CMakeLists.txt  d06.cpp  d06.hpp
24/d07/: CMakeLists.txt  d07.cpp  d07.hpp  main.cpp
24/d08/: CMakeLists.txt  d08.cpp  d08.hpp  main.cpp
24/d09/: CMakeLists.txt  d09.cpp  d09.hpp
24/d10/: CMakeLists.txt  d10.cpp  d10.hpp
24/d11/: CMakeLists.txt  d11.cpp  d11.hpp  main.cpp
24/d12/: CMakeLists.txt  d12.cpp  d12.hpp  main.cpp
24/d13/: CMakeLists.txt  d13.cpp  d13.hpp
24/d14/: CMakeLists.txt  d14.cpp  d14.hpp
24/d15/: CMakeLists.txt  d15.cpp  d15.hpp
24/d16/: CMakeLists.txt  d16.cpp  d16.hpp
24/d17/: CMakeLists.txt  d17.cpp  d17.hpp  main.cpp
24/d18/: CMakeLists.txt  d18.cpp  d18.hpp  main.cpp
24/d19/: CMakeLists.txt  d19.cpp  d19.hpp
24/d20/: CMakeLists.txt  d20.cpp  d20.hpp
24/d21/: CMakeLists.txt  d21.cpp  d21.hpp
24/d22/: CMakeLists.txt  d22.cpp  d22.hpp
24/d23/: CMakeLists.txt  d23.cpp  d23.hpp
24/d24/: CMakeLists.txt  d24.cpp  d24.hpp
24/d25/: CMakeLists.txt  d25.cpp  d25.hpp
24/main/: main.cpp
24/test/: CMakeLists.txt  main.cpp
25/: Cargo.toml
25/d01/: Cargo.toml
25/d01/src/: main.rs
25/d02/: Cargo.toml
25/d02/src/: main.rs
25/d03/: Cargo.toml
25/d03/src/: main.rs
25/d04/: Cargo.toml
25/d04/src/: main.rs
25/d05/: Cargo.toml
25/d05/src/: main.rs
25/d06/: Cargo.toml
25/d06/src/: main.rs
25/d07/src/: main.rs
25/d08/: Cargo.toml
25/d08/src/: main.rs
25/d09/: Cargo.toml
25/d09/src/: main.rs
25/d10/: Cargo.toml
25/d10/src/: main.rs
25/d11/: Cargo.toml
25/d11/src/: main.rs
25/d12/: Cargo.toml
25/d12/src/: main.rs
common/src/: grid.rs  io.rs  lib.rs
core/: CMakeLists.txt
core/inc/: core_lib.hpp  file_io.hpp
core/src/: core_lib.cpp  file_io.cpp
d01/: CMakeLists.txt  main.cpp
d02/: CMakeLists.txt  main.cpp
d03/: CMakeLists.txt  main.cpp
d04/: CMakeLists.txt  main.cpp
d05/: CMakeLists.txt  main.cpp
d06/: CMakeLists.txt  main.cpp
d07/: CMakeLists.txt  main.cpp
d08/: CMakeLists.txt  main.cpp
d09/: CMakeLists.txt  main.cpp
d10/: CMakeLists.txt  main.cpp
d11/: CMakeLists.txt  main.cpp
d12/: CMakeLists.txt  main.cpp
d13/: CMakeLists.txt  main.cpp
d14/: CMakeLists.txt  main.cpp
d15/: main.cpp
d16/: main.cpp
d17/: CMakeLists.txt  main.cpp
